[tool.poetry]
name = "cnn_network_analysis"
version = "0.1.0"
description = ""
authors = ["asultan123 <asultan@aucegypt.edu>"]

[tool.poetry.dependencies]
python = "^3.9.5"
numpy = "*"
matplotlib = "*"
torch = "^1.9.0"
jupyterlab = "^3.1.9"
fvcore = "^0.1.5"
torchvision = "^0.10.0"
pandas = "^1.3.2"
opencv-python = "^4.5.3"
Pillow = "^8.3.1"
PyYAML = "^5.4.1"
tqdm = "^4.62.2"
tensorboard = "^2.6.0"
seaborn = "^0.11.2"
thop = "^0.0.31"
scikit-image = "^0.18.3"
scikit-learn = "^0.24.2"
myhdl = "^0.11"
autopep8 = "^1.5.7"
showast = "^0.2.4"
astor = "^0.8.1"
pydantic = "^1.8.2"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
